Updated clean dataset again

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2846,15 +2846,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 587,
    "id": "bfb00eec-c6b7-416f-b9d2-5cb507b7b426",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cust_acc_df.to_csv(output_file_paths[0], na_rep='NaN')\n",
-    "cust_churn_df.to_csv(output_file_paths[1], na_rep='NaN')\n",
-    "cust_demo_df.to_csv(output_file_paths[2], na_rep='NaN')\n",
-    "cust_serv_df.to_csv(output_file_paths[3], na_rep='NaN')"
+    "cust_acc_df.to_csv(output_file_paths[0], na_rep='NaN', index=False)\n",
+    "cust_churn_df.to_csv(output_file_paths[1], na_rep='NaN', index=False)\n",
+    "cust_demo_df.to_csv(output_file_paths[2], na_rep='NaN', index=False)\n",
+    "cust_serv_df.to_csv(output_file_paths[3], na_rep='NaN', index=False)"
    ]
   },
   {
